<resources>
    <string name="app_name">Music Player</string>
    <string name="imageview">ImageView</string>
    <string name="musico">Musico</string>
    <string name="imagebutton">ImageButton</string>
    <string name="feels">Feels</string>
    <string name="_00_00">00:00</string>
    <string name="_03_30">03:30</string>
    <string name="next_song_super_duper_song">Next Song: Super Duper Song</string>
    <string name="kiiara">Kiiara</string>
</resources>
